# tennis_scoreboard

./: .env.example  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3040d39cf932_make_winner_and_score_non_nullable.py  7d32fdca7791_initial_migration.py
app/: __init__.py  controllers.py  database.py  exceptions.py  router.py  routes.py  schemas.py  settings.py  store.py
app/domain/: __init__.py  ongoing_match.py  player.py  score.py
app/models/: __init__.py  match.py  player.py
app/repositories/: __init__.py  match_repository.py  player_repository.py
app/services/: __init__.py  match_service.py
app/templates/: index.html  match-score.html  matches.html  new-match.html
tests/domain/: test_score.py
