[project]
name = "tennis-scoreboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "waitress>=3.0.2",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.8",
    "types-waitress>=3.0.1.20250801",
]

[tool.mypy]

python_version = "3.13"
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
]
target-version = "py313" # для Python 3.13
[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
